--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "rescript-nextjs-template",
+  "name": "rescript-nextjs-mongodb-app",
   "version": "1.0.0",
-  "author": "Patrick Ecker <ryyppy@users.noreply.github.com>",
+  "author": "Kevan Stannard <kevanstannard@users.noreply.github.com>",
   "license": "Apache-2.0",
   "dependencies": {
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
-  "repository": "https://github.com/ryyppy/rescript-nextjs-template",
+  "repository": "https://github.com/kevanstannard/rescript-nextjs-mongodb-app",
   "scripts": {
     "dev": "next",
     "debug": "NODE_OPTIONS='--inspect' next",
