--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "next": "11.0.1",
     "next-connect": "0.10.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "swr": "^0.5.6"
   },
   "repository": "https://github.com/kevanstannard/rescript-nextjs-mongodb-app",
   "scripts": {
