--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@ryyppy/rescript-promise": "2.1.0",
     "mongodb": "4.0.1",
+    "nanoid": "3.1.23",
     "next": "11.0.1",
     "next-connect": "0.10.1",
     "react": "17.0.2",
