--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next-connect": "0.10.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "swr": "^0.5.6"
+    "swr": "^0.5.6",
+    "zxcvbn": "4.4.2"
   },
   "repository": "https://github.com/kevanstannard/rescript-nextjs-mongodb-app",
   "scripts": {
