--- a/package.json
+++ b/package.json
@@ -5,14 +5,17 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@ryyppy/rescript-promise": "2.1.0",
+    "@sendgrid/mail": "7.4.5",
     "bcrypt": "5.0.1",
     "mongodb": "4.0.1",
     "nanoid": "3.1.23",
     "next": "11.0.1",
     "next-connect": "0.10.1",
+    "node-fetch": "2.6.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "swr": "^0.5.6",
+    "validator": "13.6.0",
     "zxcvbn": "4.4.2"
   },
   "repository": "https://github.com/kevanstannard/rescript-nextjs-mongodb-app",
@@ -31,7 +34,6 @@
     "@rescript/react": "0.10.3",
     "autoprefixer": "10.3.1",
     "cssnano": "5.0.7",
-    "dotenv": "10.0.0",
     "gentype": "4.1",
     "next-transpile-modules": "8.0.0",
     "postcss": "8.3.6",
