--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "nanoid": "3.1.23",
     "next": "11.0.1",
     "next-connect": "0.10.1",
+    "next-iron-session": "4.2.0",
     "node-fetch": "2.6.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "swr": "^0.5.6",
+    "swr": "0.5.6",
     "validator": "13.6.0",
     "zxcvbn": "4.4.2"
   },
