--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,10 @@
 MONGODB_URI=
+MONGODB_DB=
+SESSION_COOKIE_PASSWORD=
+SESSION_COOKIE_NAME=
 RECAPTCHA_SITE_KEY=
 RECAPTCHA_SECRET_KEY=
 SENDGRID_API_KEY=
 SYSTEM_EMAIL_ADDRESS=
+
+
