--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@ryyppy/rescript-promise": "2.1.0",
     "@sendgrid/mail": "7.4.5",
     "bcrypt": "5.0.1",
+    "date-fns": "^2.23.0",
     "mongodb": "4.0.1",
     "nanoid": "3.1.23",
     "next": "11.0.1",
