--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "dependencies": {
     "@ryyppy/rescript-promise": "2.1.0",
     "@sendgrid/mail": "7.4.5",
+    "@tailwindcss/typography": "^0.4.1",
     "bcrypt": "5.0.1",
     "date-fns": "^2.23.0",
+    "marked": "^2.1.3",
     "mongodb": "4.0.1",
     "nanoid": "3.1.23",
     "next": "11.0.1",
