--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
+APPLICATION_NAME=
+APPLICATION_URL=
+APPLICATION_EMAIL_NAME=
+APPLICATION_EMAIL_ADDRESS=
 MONGODB_URI=
 MONGODB_DB=
 SESSION_COOKIE_PASSWORD=
@@ -5,5 +9,3 @@ SESSION_COOKIE_NAME=
 RECAPTCHA_SITE_KEY=
 RECAPTCHA_SECRET_KEY=
 SENDGRID_API_KEY=
-SYSTEM_EMAIL_NAME=
-SYSTEM_EMAIL_ADDRESS=
