--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "node-fetch": "2.6.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "rescript-jzon": "1.1.0",
     "swr": "0.5.6",
     "validator": "13.6.0",
     "zxcvbn": "4.4.2"
