--- a/package.json
+++ b/package.json
@@ -3,13 +3,26 @@
   "version": "1.0.0",
   "author": "Kevan Stannard <kevanstannard@users.noreply.github.com>",
   "license": "Apache-2.0",
+  "repository": "https://github.com/kevanstannard/rescript-nextjs-mongodb-app",
+  "scripts": {
+    "dev": "next",
+    "debug": "NODE_OPTIONS='--inspect' next",
+    "build": "rescript && next build",
+    "now-build": "rescript && next build",
+    "export": "next export",
+    "start": "next start -p $PORT",
+    "res:build": "rescript",
+    "res:clean": "rescript clean",
+    "res:start": "rescript build -w"
+  },
   "dependencies": {
     "@ryyppy/rescript-promise": "2.1.0",
     "@sendgrid/mail": "7.4.5",
-    "@tailwindcss/typography": "^0.4.1",
+    "@tailwindcss/typography": "0.4.1",
     "bcrypt": "5.0.1",
-    "date-fns": "^2.23.0",
-    "marked": "^2.1.3",
+    "date-fns": "2.23.0",
+    "helmet": "4.6.0",
+    "marked": "2.1.3",
     "mongodb": "4.0.1",
     "nanoid": "3.1.23",
     "next": "11.0.1",
@@ -22,18 +35,6 @@
     "swr": "0.5.6",
     "validator": "13.6.0",
     "zxcvbn": "4.4.2"
-  },
-  "repository": "https://github.com/kevanstannard/rescript-nextjs-mongodb-app",
-  "scripts": {
-    "dev": "next",
-    "debug": "NODE_OPTIONS='--inspect' next",
-    "build": "rescript && next build",
-    "now-build": "rescript && next build",
-    "export": "next export",
-    "start": "next start -p $PORT",
-    "res:build": "rescript",
-    "res:clean": "rescript clean",
-    "res:start": "rescript build -w"
   },
   "devDependencies": {
     "@rescript/react": "0.10.3",
