--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "rescript-nextjs-mongodb-app",
   "version": "1.0.0",
-  "author": "Kevan Stannard <kevanstannard@users.noreply.github.com>",
-  "license": "Apache-2.0",
+  "author": "Kevan Stannard",
+  "license": "MIT",
   "repository": "https://github.com/kevanstannard/rescript-nextjs-mongodb-app",
   "scripts": {
     "dev": "next",
@@ -17,34 +17,34 @@
   },
   "dependencies": {
     "@ryyppy/rescript-promise": "2.1.0",
-    "@sendgrid/mail": "7.4.5",
+    "@sendgrid/mail": "7.4.7",
     "@tailwindcss/typography": "0.4.1",
     "bcrypt": "5.0.1",
-    "date-fns": "2.23.0",
+    "date-fns": "2.24.0",
     "helmet": "4.6.0",
-    "marked": "2.1.3",
-    "mongodb": "4.0.1",
-    "nanoid": "3.1.23",
-    "next": "11.0.1",
-    "next-connect": "0.10.1",
+    "marked": "3.0.4",
+    "mongodb": "4.1.2",
+    "nanoid": "3.1.25",
+    "next": "11.1.2",
+    "next-connect": "0.10.2",
     "next-iron-session": "4.2.0",
-    "node-fetch": "2.6.1",
+    "node-fetch": "3.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "rescript-jzon": "1.1.0",
-    "swr": "0.5.6",
+    "rescript-jzon": "1.2.0",
+    "swr": "1.0.1",
     "validator": "13.6.0",
     "zxcvbn": "4.4.2"
   },
   "devDependencies": {
     "@rescript/react": "0.10.3",
-    "autoprefixer": "10.3.1",
-    "cssnano": "5.0.7",
-    "gentype": "4.1",
+    "autoprefixer": "10.3.5",
+    "cssnano": "5.0.8",
+    "gentype": "4.2.0",
     "next-transpile-modules": "8.0.0",
-    "postcss": "8.3.6",
+    "postcss": "8.3.7",
     "postcss-cli": "8.3.1",
     "rescript": "9.1.4",
-    "tailwindcss": "2.2.7"
+    "tailwindcss": "2.2.15"
   }
 }
